# text_generation_example

./: README.md  params.cfg  pyproject.toml
trainer/: __main__.py  preprocess.py  scraping.py  shared_config.py
