[tool.poetry]
name = "text_generation_prac"
version = "0.1.0"
description = ""
authors = ["T-Sumida <ui.suto05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.25.1"
sentencepiece = "^0.1.97"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.0%2Bcu113-cp38-cp38-win_amd64.whl"}
luigi = "^3.1.1"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
